--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -21,5 +21,5 @@ a:hover {
 .footerBody {
     background: rgb(0, 0, 0);
     padding-bottom: 10px;
-    height: 3rem;
+    height: 4rem;
 }
