--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -28,12 +28,12 @@
     font-weight: 400; 
     color: white;
     text-decoration: none;
-    text-shadow: 1px 1px 1px 1px black;
+    text-shadow: 1px 1px 2px black;
     transition: all ease-in-out 0.3s
 }
 
 #basic-navbar-nav a:hover {
-    text-decoration: line-through;
+    text-decoration: overline;
     color: rgb(53, 161, 197);
     font-size: 30px;
     translate: translateY(5px);
